# Face_analysis_android

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/facetool/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: u_base.txt  w_exp.txt  w_shp.txt
app/src/main/cpp/: logs.h  native-lib.cpp  onnxruntime_inference.cpp  onnxruntime_inference.h  postprocess.h  preprocess.h  utils.h
app/src/main/java/com/example/facetool/: Inference.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/facetool/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
